--- a/w1/w1-s6-c2-affectation-operateurs.ipynb
+++ b/w1/w1-s6-c2-affectation-operateurs.ipynb
@@ -7,7 +7,7 @@
     "<style>div.title-slide {    width: 100%;    display: flex;    flex-direction: row;            /* default value; can be omitted */    flex-wrap: nowrap;              /* default value; can be omitted */    justify-content: space-between;}</style><div class=\"title-slide\">\n",
     "<span style=\"float:left;\">Licence CC BY-NC-ND</span>\n",
     "<span>Thierry Parmentelat &amp; Arnaud Legout</span>\n",
-    "<span><img src=\"../media/both-logos-small-alpha.png\" style=\"display:inline\" /></span>\n",
+    "<span><img src=\"media/both-logos-small-alpha.png\" style=\"display:inline\" /></span>\n",
     "</div>"
    ]
   },
@@ -48,9 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entier 12\n"
+     ]
+    }
+   ],
    "source": [
     "entier = 10\n",
     "\n",
@@ -67,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entier 12\n"
+     ]
+    }
+   ],
    "source": [
     "entier = 10\n",
     "\n",
@@ -93,9 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "après décrément 8\n",
+      "après doublement 16\n",
+      "mis à moitié 8.0\n"
+     ]
+    }
+   ],
    "source": [
     "entier -= 4\n",
     "print('après décrément', entier)\n",
@@ -121,9 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "liste [0, 3, 5]\n",
+      "après ajout [0, 3, 5, 'a', 'b']\n"
+     ]
+    }
+   ],
    "source": [
     "liste = [0, 3, 5]\n",
     "print('liste', liste)\n",
@@ -155,9 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entier: 2\n",
+      "à la puissance dix: 1024\n",
+      "modulo 5: 4\n",
+      "double décalage gauche: 16\n"
+     ]
+    }
+   ],
    "source": [
     "entier = 2\n",
     "print('entier:', entier)\n",
@@ -192,7 +238,7 @@
    "auto_select": "code",
    "auto_select_fragment": true,
    "autolaunch": false,
-   "backimage": "../media/nologo.png",
+   "backimage": "media/nologo.png",
    "height": "100%",
    "start_slideshow_at": "selected",
    "theme": "simple",
