--- a/w1/w1-s5-c3-introduction-types.ipynb
+++ b/w1/w1-s5-c3-introduction-types.ipynb
@@ -7,7 +7,7 @@
     "<style>div.title-slide {    width: 100%;    display: flex;    flex-direction: row;            /* default value; can be omitted */    flex-wrap: nowrap;              /* default value; can be omitted */    justify-content: space-between;}</style><div class=\"title-slide\">\n",
     "<span style=\"float:left;\">Licence CC BY-NC-ND</span>\n",
     "<span>Thierry Parmentelat &amp; Arnaud Legout</span>\n",
-    "<span><img src=\"../media/both-logos-small-alpha.png\" style=\"display:inline\" /></span>\n",
+    "<span><img src=\"media/both-logos-small-alpha.png\" style=\"display:inline\" /></span>\n",
     "</div>"
    ]
   },
@@ -48,24 +48,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "cell_style": "split",
-    "collapsed": true
+    "cell_style": "split"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "cell_style": "split",
-    "collapsed": true
+    "cell_style": "split"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type('spam')"
    ]
@@ -93,12 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "cell_style": "split",
-    "collapsed": true
+    "cell_style": "split"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = 1\n",
     "type(x)"
@@ -106,11 +136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "cell_style": "split"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# la variable x peut référencer un objet de n'importe quel type\n",
     "\n",
@@ -141,11 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "isinstance(23, int)"
    ]
@@ -194,7 +244,7 @@
    "auto_select": "code",
    "auto_select_fragment": true,
    "autolaunch": false,
-   "backimage": "../media/nologo.png",
+   "backimage": "media/nologo.png",
    "height": "100%",
    "slideNumber": "c",
    "start_slideshow_at": "selected",
