--- a/w1/w1-s6-c3-precision-flottants.ipynb
+++ b/w1/w1-s6-c3-precision-flottants.ipynb
@@ -7,7 +7,7 @@
     "<style>div.title-slide {    width: 100%;    display: flex;    flex-direction: row;            /* default value; can be omitted */    flex-wrap: nowrap;              /* default value; can be omitted */    justify-content: space-between;}</style><div class=\"title-slide\">\n",
     "<span style=\"float:left;\">Licence CC BY-NC-ND</span>\n",
     "<span>Thierry Parmentelat &amp; Arnaud Legout</span>\n",
-    "<span><img src=\"../media/both-logos-small-alpha.png\" style=\"display:inline\" /></span>\n",
+    "<span><img src=\"media/both-logos-small-alpha.png\" style=\"display:inline\" /></span>\n",
     "</div>"
    ]
   },
@@ -53,9 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6000000000000001"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "0.2 + 0.4"
    ]
@@ -72,9 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# du coup cette expression est fausse, à cause de l'erreur d'arrondi\n",
     "0.3 - 0.1 == 0.2"
@@ -125,9 +147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# on importe le module fractions, qui lui-même définit le symbole Fraction\n",
     "from fractions import Fraction\n",
@@ -145,9 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Fraction('0.3') - Fraction('0.1') == Fraction('2/10')"
    ]
@@ -175,9 +219,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from decimal import Decimal\n",
     "\n",
@@ -227,7 +282,7 @@
    "auto_select": "code",
    "auto_select_fragment": true,
    "autolaunch": false,
-   "backimage": "../media/nologo.png",
+   "backimage": "media/nologo.png",
    "height": "100%",
    "slideNumber": "c",
    "start_slideshow_at": "selected",
